<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginSign.LoginFragment">

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:padding="5dp"
        android:hint="@string/username"
        android:background="@color/white"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/Password"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </EditText>

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/login"
        android:background="@color/btn_login_bg"
        android:textColor="@color/btn_login"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_question"
        android:layout_margin="112dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/Login"
        app:layout_constraintBottom_toTopOf="@id/Sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <Button
        android:id="@+id/Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>