<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Description"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

    <Button
        android:id="@+id/date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo">
        </RadioButton>

            <RadioButton
                android:id="@+id/doing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doing"
                android:textColor="@android:color/black"/>


            <RadioButton
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="@android:color/black"/>

        </RadioGroup>

    </LinearLayout>

</ScrollView>